[gd_scene load_steps=25 format=3 uid="uid://dsjasswtmiyrs"]

[ext_resource type="Texture2D" uid="uid://dlkn3iy41yb2r" path="res://player/animation/idle_right.png" id="1_fkmpl"]
[ext_resource type="Script" path="res://player/player_platf.gd" id="1_maq0a"]
[ext_resource type="Texture2D" uid="uid://bpj1f2golbhce" path="res://player/animation/jump.png" id="2_ofhv3"]
[ext_resource type="Texture2D" uid="uid://dr35draa474sx" path="res://player/animation/run_right.png" id="3_fgaaj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_84sxg"]
atlas = ExtResource("1_fkmpl")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nlkl1"]
atlas = ExtResource("1_fkmpl")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjs24"]
atlas = ExtResource("2_ofhv3")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_an5b0"]
atlas = ExtResource("2_ofhv3")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_84uta"]
atlas = ExtResource("2_ofhv3")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulkmd"]
atlas = ExtResource("2_ofhv3")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfk6c"]
atlas = ExtResource("2_ofhv3")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bkak"]
atlas = ExtResource("2_ofhv3")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vh521"]
atlas = ExtResource("2_ofhv3")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8dky"]
atlas = ExtResource("3_fgaaj")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbno2"]
atlas = ExtResource("3_fgaaj")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlaas"]
atlas = ExtResource("3_fgaaj")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sjknv"]
atlas = ExtResource("3_fgaaj")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcat6"]
atlas = ExtResource("3_fgaaj")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jusn6"]
atlas = ExtResource("3_fgaaj")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrm7n"]
atlas = ExtResource("3_fgaaj")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jastm"]
atlas = ExtResource("3_fgaaj")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_jikl1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_84sxg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nlkl1")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjs24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_an5b0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_84uta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulkmd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfk6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bkak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vh521")
}],
"loop": false,
"name": &"jump",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8dky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbno2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlaas")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sjknv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcat6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jusn6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrm7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jastm")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_41l20"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5xgee"]
radius = 15.0

[node name="player_platf" type="CharacterBody2D"]
texture_filter = 1
script = ExtResource("1_maq0a")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_jikl1")
animation = &"jump"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_41l20")

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.09

[node name="ActionableFinder" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActionableFinder"]
shape = SubResource("CircleShape2D_5xgee")

[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
